# rupico

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
src/: lib.rs  main.rs  micropython.rs
tests/: cli_smoke.rs
