[package]
name = "rupico"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
eframe = "0.34.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
